--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
@@ -1,2 +1,21 @@
 server.port=8080
 server.servlet.context-path=/Shopmeadmin
+
+spring.datasource.url=jdbc:mysql://localhost:3306/slipkartdb
+spring.datasource.username=root
+spring.datasource.password=787898
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
+#logging.file.name=Shopme-backend.log
+#logging.logback.rollingpolicy.file-name-pattern=Shopme-backend-%d{yyyy-mm-dd}.%i.log
+#logging.logback.rollingpolicy.max-file-size=100KB
+#logging.logback.rollingpolicy.total-size-cap=1MB
+#logging.logback.rollingpolicy.max-history=14
+#logging.logback.rollingpolicy.clean-history-on-start=true
+
